# dbprojects

./: README.md
retail_lakehouse/: .gitignore  README.md  databricks.yml  pyproject.toml
retail_lakehouse/resources/: bronze_taxi_job.yml  bronze_taxi_zones_job.yml  gold_daily_revenue_table_job.yml  silver_dedup_trips_job.yml  silver_enrich_trips_job.yml
retail_lakehouse/src/bronze/: ingest_taxi_trips.py  ingest_taxi_zones.py
retail_lakehouse/src/gold/: daily_revenue_table.py
retail_lakehouse/src/retail_lakehouse/: main.py
retail_lakehouse/src/silver/: dedup_trips.py  enrich_trips_with_zones.py
retail_lakehouse/tests/: sample_taxis_test.py
