[project]
name = "retail_lakehouse"
version = "0.0.1"
authors = [{ name = "shrividyahegde222@gmail.com" }]
requires-python = ">=3.10,<3.13"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "retail_lakehouse.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
